--- a/web/projeler/comar/mimari/index.html
+++ b/web/projeler/comar/mimari/index.html
@@ -52,40 +52,28 @@
 
 <H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3><!--TOC section İçindekiler-->
-
-<H2>İçindekiler</H2><!--SEC END -->
-
+<H3 ALIGN=center>24 Kasım 2004</H3>
+<H2>İçindekiler</H2>
 <UL><LI>
-<A HREF="#htoc1">1&nbsp;&nbsp;Sorun</A>
+<A HREF="node_1.html#htoc1">1&nbsp;&nbsp;Sorun</A>
 <UL><LI>
-<A HREF="#htoc2">1.1&nbsp;&nbsp;Dağıtımların Yaklaşımı</A>
-<LI><A HREF="#htoc3">1.2&nbsp;&nbsp;İşletim Sistemleri</A>
-<LI><A HREF="#htoc4">1.3&nbsp;&nbsp;Uzman Sistemler</A>
+<A HREF="node_2.html#htoc2">1.1&nbsp;&nbsp;Dağıtımların Yaklaşımı</A>
+<LI><A HREF="node_3.html#htoc3">1.2&nbsp;&nbsp;İşletim Sistemleri</A>
+<LI><A HREF="node_4.html#htoc4">1.3&nbsp;&nbsp;Uzman Sistemler</A>
 </UL>
-<LI><A HREF="#htoc5">2&nbsp;&nbsp;Gereksinimler</A>
-<LI><A HREF="#htoc6">3&nbsp;&nbsp;COMAR</A>
+<LI><A HREF="node_5.html#htoc5">2&nbsp;&nbsp;Gereksinimler</A>
+<LI><A HREF="node_6.html#htoc6">3&nbsp;&nbsp;COMAR</A>
 <UL><LI>
-<A HREF="#htoc7">3.1&nbsp;&nbsp;Nesne Modeli</A>
-<LI><A HREF="#htoc8">3.2&nbsp;&nbsp;CSL</A>
-<LI><A HREF="#htoc9">3.3&nbsp;&nbsp;Betikler</A>
-<LI><A HREF="#htoc10">3.4&nbsp;&nbsp;comard</A>
-<LI><A HREF="#htoc11">3.5&nbsp;&nbsp;KGA</A>
+<A HREF="node_6.html#htoc7">3.1&nbsp;&nbsp;Nesne Modeli</A>
+<LI><A HREF="node_6.html#htoc8">3.2&nbsp;&nbsp;CSL</A>
+<LI><A HREF="node_6.html#htoc9">3.3&nbsp;&nbsp;Betikler</A>
+<LI><A HREF="node_6.html#htoc10">3.4&nbsp;&nbsp;comard</A>
+<LI><A HREF="node_6.html#htoc11">3.5&nbsp;&nbsp;KGA</A>
 </UL>
 </UL>
 
 
-
-<H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Sorun</H2>
-Bir sisteme kurulan uygulamaların, birbirleriyle uyumlu çalışabilmeleri
-için bazı ayarlarının yapılması gereklidir. Bunu otomatik olarak yapabilecek
-bir sistem olmadığında, kullanıcı kendi yapmak istediği işin dışında
-bir takım teknik konularda bilgi kazanmak ve uygulamaları tek tek
-ayarlamak için zaman kaybetmektedir. Bu konudaki nasıl (howto) belgeleri,
-az sayıda belirli senaryo için yazıldıklarından kullanıcıya yardımcı
-olamamaktadır.<BR>
-<BR>
-<UL><LI><A HREF='./node_1.html'>Dağıtımların Yaklaşımı</A></LI><LI><A HREF='./node_2.html'>İşletim Sistemleri</A></LI><LI><A HREF='./node_3.html'>Uzman Sistemler</A></LI></UL><table class='navbar'><tbody><tr><td class='navhide'><img src='../../../images/nav_back.png'> Önceki sayfa</td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_1.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navhide'><img src='../../../images/nav_back.png'> Önceki sayfa</td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_1.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
