--- a/web/projeler/comar/mimari/mimari.html
+++ b/web/projeler/comar/mimari/mimari.html
@@ -142,7 +142,7 @@ Bu yöntemde şu noksanlıkları görüyoruz:
 <UL><LI>
 Uygulamaların ayarlarına merkezi erişim sunulması, tek başına istenen
 faydayı getirmemektedir. Bir genel model olmadığı için, bu bilgileri
-kullanmak isteyen kullanıcı ya da diğer uygulamaların, bilgiyi sunan
+kullanmak isteyen kullanıcı yada diğer uygulamaların, bilgiyi sunan
 uygulama ve ayarları hakkında detaylı bilgiye sahip olması sorunu
 hala ortadadır.
 <LI>Uygulamalar ve yönetim sistemi arasında API düzeyinde bir ilişki,
@@ -256,7 +256,7 @@ sağlayacaktır.
 <LI>Nesne modelinde, diğer bilgisayarlardan gelen nesnelerin, birer uzak
 nesne olarak yer alabilmesi ve kullanıcı tarafından aynen yerel nesneler
 gibi yönetilebilmesi, bir ağ yönetim sistemi oluşturmayı çok basit
-bir iş haline getirecektir. Hiyerarşik model burada erişim yetki denetimini
+bir iş haline getirecektir. Hiyerarşik model burda erişim yetki denetimini
 belli alt sistemler bazında ayarlamayı kolaylaştıracaktır.
 <LI>Aynı görevi yapabilecek birden fazla uygulama olabilir. Duruma göre
 görevlerin hepsine birden yaptırılması, veya içlerinden birinin seçilmesi
