--- a/web/projeler/comar/mimari/node_2.html
+++ b/web/projeler/comar/mimari/node_2.html
@@ -52,67 +52,44 @@
 
 <H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3><!--TOC section İçindekiler-->
-
-<H2>İçindekiler</H2><!--SEC END -->
-
-<UL><LI>
-<A HREF="#htoc1">1&nbsp;&nbsp;Sorun</A>
-<UL><LI>
-<A HREF="#htoc2">1.1&nbsp;&nbsp;Dağıtımların Yaklaşımı</A>
-<LI><A HREF="#htoc3">1.2&nbsp;&nbsp;İşletim Sistemleri</A>
-<LI><A HREF="#htoc4">1.3&nbsp;&nbsp;Uzman Sistemler</A>
-</UL>
-<LI><A HREF="#htoc5">2&nbsp;&nbsp;Gereksinimler</A>
-<LI><A HREF="#htoc6">3&nbsp;&nbsp;COMAR</A>
-<UL><LI>
-<A HREF="#htoc7">3.1&nbsp;&nbsp;Nesne Modeli</A>
-<LI><A HREF="#htoc8">3.2&nbsp;&nbsp;CSL</A>
-<LI><A HREF="#htoc9">3.3&nbsp;&nbsp;Betikler</A>
-<LI><A HREF="#htoc10">3.4&nbsp;&nbsp;comard</A>
-<LI><A HREF="#htoc11">3.5&nbsp;&nbsp;KGA</A>
-</UL>
-</UL>
-
-
-
-<H3><A NAME="htoc3">1.2</A>&nbsp;&nbsp;İşletim Sistemleri</H3>
-Windows, OS/2, MacOS X gibi ticari işletim sistemlerinde, sistemin
-parçaları ve kullanıcının çalışma ortamını oluşturan uygulamalar genellikle
-tek bir merkezden çıktıkları için, uyum sorunları işletim sisteminin
-çağrıları (API si) üzerinden çözülmektedir. Ayarları toplu halde tutan
-merkezi bir kütük; çokluortam, ağ protokolü, donanım yöneticisi gibi
-parçalar için parçaların yerleşebileceği modül yapıları bulunmaktadır.<BR>
+<H3 ALIGN=center>24 Kasım 2004</H3>
+<H3><A NAME="htoc2">1.1</A>&nbsp;&nbsp;Dağıtımların Yaklaşımı</H3>
+Varolan Linux dağıtımları, bu sorunu örneğin kurulu uygulamalar (menu),
+fontlar, açılış işlemleri (initscripts) gibi tek tek alt sistemler
+bazında çözmeye çalışmaktadır.<BR>
 <BR>
-Bu yöntemde şu noksanlıkları görüyoruz:
+Genelde, uygulama paketleri, dosya sistemi üzerinde sabit bir dizine,
+söz konusu alt sisteme neler sağladıklarını kaydetmekte; bu alt sistemi
+kullanacak uygulamalar ise, buraya önceden belirlenmiş biçimde kaydedilen
+dosyaları tarayarak, sağlanan hizmetleri bulmaktadır. Uygulamaların
+entegrasyonu için, ya uygulamalar buradaki standartları bilecek biçimde
+değiştirilmekte, ya da gerekli çevrimi yapacak üçüncü bir yönetici
+uygulama araya sokulmaktadır. Kayıt ve çevrim işlemleri için özel
+veri biçimleri, kabuk, Perl ya da Python betikleri, bazen de bunların
+bir karışımı kullanılmaktadır.<BR>
+<BR>
+Bu yöntemde gördüğümüz noksanlıklar:
 <UL><LI>
-Uygulamaların ayarlarına merkezi erişim sunulması, tek başına istenen
-faydayı getirmemektedir. Bir genel model olmadığı için, bu bilgileri
-kullanmak isteyen kullanıcı ya da diğer uygulamaların, bilgiyi sunan
-uygulama ve ayarları hakkında detaylı bilgiye sahip olması sorunu
-hala ortadadır.
-<LI>Uygulamalar ve yönetim sistemi arasında API düzeyinde bir ilişki,
-iki grubu iç içe geçirip direkt bağlantı sağlayacağı için, parçaların
-bağımsızlığını azaltacaktır. Bu da, ayrı ayrı parçaların geliştiricilerinin,
-adam/ay modelinde bağımsız çalışmak yerine, bir araya gelip karşılıklı
-iletişim ve senkronizasyon ile çalışmasına, dolayısıyla geliştirme
-işlerinin ölçeklenebilirliğinin azalmasına yol açmaktadır.
-<LI>Parçaların farklı ellerden çıktıkları ve alternatiflerin bol olduğu
-özgür yazılım modeline uymamaktadır.
-<LI>Dağıtımımıza girecek uygulamaları yeni API leri kullanacak şekilde
-değiştirmek, uygulama kodunu çok iyi incelemeyi, yapılan değişikliklerin
-yeni sorunlara yol açmadığını kapsamlı olarak analiz etmeyi gerektirmektedir.
-Bu da büyük zaman ve emek harcamasına yol açacaktır.
-<LI>Bir alt sistemin yetersiz kaldığı görülüp yeni bir alt sistem yapısı
-geliştirildiğinde, API değişikliğine yol açmamak için API üzerindeki
-değer ve çağrılara kapsamları dışında anlamlar ve görevler yüklenmekte,
-ve API yi öğrenmek ve kullanmak isteyenlerin işi çok zorlaşmaktadır.
-Ya da API değişikliği yapılmakta, ve varolan uygulamaların yeni API
-yi taşınması, eski ve üçüncü parti uygulamalar için uyumluluk katmanları
-hazırlanması gibi fazladan sorunlar çıkmaktadır.
-<LI>Her dile API desteği verebilmek için ya CORBA gibi karmaşıklığı arttıracak
-teknolojiler ya da bakım işlerini yükseltecek çok sayıda ``wrapper''
-hazırlanması gereklidir.
+Alt sistemler, bir sistem modeli içinde toplu biçimde tasarlanmadıklarından,
+birbirleriyle ilişkileri eksik kalmakta ve uygulamaları paketleyenlerin
+dikkatinden kaçabilmektedir. Birçok uygulama, bağımsız tek başına
+çalışan sistemler olmayıp, bir işletim sistemi içerisinde bir takım
+görevleri yerine getiren bileşenlerdir. Sistem modeli olmayınca uygulamaların
+bu görevlerini birbirine ekleyerek tek tek uygulamaların toplamından
+daha güçlü bir sistem elde etmek mümkün olmamaktadır.
+<LI>Kapsayıcı bir sistem modeli olmaması kullanıcı ve sistem profilleri
+oluşturmayı ve yönetmeyi zorlaştırmaktadır.
+<LI>Dosya sistemi üzerinden gidilmesi, bazı servislerin ve alt sistem
+yönetici uygulamalarının uzak makinalarda çalışabileceği esnek bir
+tasarıma olanak vermemektedir.
+<LI>Kabuk ve Perl/Python betiklerinin paketleyicinin veya alt sistemin
+tercihine göre karışık olarak kullanılması, paketlerin doğruluğunu
+otomatik olarak denetleyecek programlar yapmayı ve sorunlu paketlerin
+incelenip, entegrasyon hatalarının giderilmesini güçleştirmektedir.
+<LI>Özellikle kabuk betikleri içerisinde değişikliklerin atomik yapılması
+ve o an bir nedenden dolayı yapılamayan işlemlerin yapılabilecekleri
+ana kadar bekletilmesi çok güç olduğundan sık sık alt sistemler hatalı
+ayarlanmakta ve uygulamalar arasında sorunlar çıkmaktadır.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_1.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_3.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
