--- a/web/projeler/comar/mimari/node_3.html
+++ b/web/projeler/comar/mimari/node_3.html
@@ -52,73 +52,44 @@
 
 <H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3><!--TOC section İçindekiler-->
-
-<H2>İçindekiler</H2><!--SEC END -->
-
-<UL><LI>
-<A HREF="#htoc1">1&nbsp;&nbsp;Sorun</A>
-<UL><LI>
-<A HREF="#htoc2">1.1&nbsp;&nbsp;Dağıtımların Yaklaşımı</A>
-<LI><A HREF="#htoc3">1.2&nbsp;&nbsp;İşletim Sistemleri</A>
-<LI><A HREF="#htoc4">1.3&nbsp;&nbsp;Uzman Sistemler</A>
-</UL>
-<LI><A HREF="#htoc5">2&nbsp;&nbsp;Gereksinimler</A>
-<LI><A HREF="#htoc6">3&nbsp;&nbsp;COMAR</A>
-<UL><LI>
-<A HREF="#htoc7">3.1&nbsp;&nbsp;Nesne Modeli</A>
-<LI><A HREF="#htoc8">3.2&nbsp;&nbsp;CSL</A>
-<LI><A HREF="#htoc9">3.3&nbsp;&nbsp;Betikler</A>
-<LI><A HREF="#htoc10">3.4&nbsp;&nbsp;comard</A>
-<LI><A HREF="#htoc11">3.5&nbsp;&nbsp;KGA</A>
-</UL>
-</UL>
-
-
-
-<H3><A NAME="htoc4">1.3</A>&nbsp;&nbsp;Uzman Sistemler</H3>
-Linux'un masaüstü ve iş dünyasında kullanımının artmasıyla, bir takım
-genel yapılandırma ve yönetim araçları da geliştirilmiştir. YaST,
-LinuxConf, WebMin gibi bu araçlar kullanıcıya üst seviye bir arabirim
-sunup, kullanıcının burada yaptığı seçimleri uygulamaların alt seviye
-ayarlarına taşımaktadır. İki seviye arasında geçiş yapabilmek için
-gereken bilgiler araçların içinde bir dizi kural olarak kodlanmıştır.<BR>
+<H3 ALIGN=center>24 Kasım 2004</H3>
+<H3><A NAME="htoc3">1.2</A>&nbsp;&nbsp;İşletim Sistemleri</H3>
+Windows, OS/2, MacOS X gibi ticari işletim sistemlerinde, sistemin
+parçaları ve kullanıcının çalışma ortamını oluşturan uygulamalar genellikle
+tek bir merkezden çıktıkları için, uyum sorunları işletim sisteminin
+çağrıları (API si) üzerinden çözülmektedir. Ayarları toplu halde tutan
+merkezi bir kütük; çokluortam, ağ protokolü, donanım yöneticisi gibi
+parçalar için parçaların yerleşebileceği modül yapıları bulunmaktadır.<BR>
 <BR>
-Bundan başka, bilgisayar ağlarının yaygınlaşmasıyla birlikte, birden
-fazla bilgisayarın merkezi yönetimini yapabilecek IBM Tivoli, HP OpenView,
-CIM, SNMP, OSI CMIP gibi ürün ve çerçeveler ortaya çıkmıştır. Ayrıntılarda
-farkları olmakla birlikte, genel mimarileri, yönetilecek bilgisayarda
-bulunacak ajanlar, yönetim bilgisayarında bir yönetici yazılım, bunlar
-arasında bir iletişim protokolü ve yönetilecek görev ve ayarları belirten
-bilgi modellerinden oluşmaktadır. Yalnızca yapılandırma ile sınırlı
-kalmayıp, hata bulma, performans ve güvenlik değerlendirmeleri, kullanım
-hesaplama gibi işleri de yapmaktadırlar.<BR>
-<BR>
-Bu sistemler de, kapsayıcı genel bir model yerine, tüm olası ayar
-ve görevleri sunmaya çalışmakta, yönetici yazılımı kullanacak kişinin
-yönetilecek her birimi ve bunlar arasındaki ilişkileri çok iyi bildiğini
-varsaymaktadır. Sorun kullanıcıdan alınıp yöneticiye taşındığında,
-artan miktardan dolayı başedilmez hale gelmektedir. Bu noktada yöneticiye
-yardımcı olacak uzman sistemler sunulmaktadır.<BR>
-<BR>
-Her iki grup yazılım da, kolay kullanılır ve detaylarda boğulmamış
-bir yapılandırma arabirimi sunabilmek için, alt ve üst düzey bilgiler
-arasındaki ilişkileri tanımlayan kural dizileri kullanmakta ve bu
-kurallar, işin uzmanları tarafından, bir elden yönetici yazılımın
-içinde kodlanmaktadır. Yönetici yazılımın bir takım API ler ile bu
-bilgileri üst seviye, bazen üçüncü parti, uygulamalardan alması, bilginin
-parçalarda değil, merkezde bulunduğu gerçeğini değiştirmemektedir.<BR>
-<BR>
-Bu uzman sistem yaklaşımında şu noksanlıkları görmekteyiz:
+Bu yöntemde şu noksanlıkları görüyoruz:
 <UL><LI>
-Parçaların dinamik olarak değişmesi, eski kurallarda değişikler ve
-yeni kurallar gerektirmekte, kural dizilerini oluşturmayı zorlaştırmaktadır.
-<LI>Çok sayıda ve çeşitli parçalardan oluşan bir sistem için çok sayıda
-kural gerekmekte; kuralların işletilmesi, güncellenmesi, değiştirilmesi
-gittikçe büyüyen bir sorun olmaktadır.
-<LI>Kurallar birden fazla parçanın detaylı bilgilerini bir arada içerdiği
-için, kural yazmak çok zorlaşmakta, kuralların hata içermesi, öngörülmeyen
-durumları ihmal etmesi olasılıkları artmaktadır.
+Uygulamaların ayarlarına merkezi erişim sunulması, tek başına istenen
+faydayı getirmemektedir. Bir genel model olmadığı için, bu bilgileri
+kullanmak isteyen kullanıcı yada diğer uygulamaların, bilgiyi sunan
+uygulama ve ayarları hakkında detaylı bilgiye sahip olması sorunu
+hala ortadadır.
+<LI>Uygulamalar ve yönetim sistemi arasında API düzeyinde bir ilişki,
+iki grubu iç içe geçirip direkt bağlantı sağlayacağı için, parçaların
+bağımsızlığını azaltacaktır. Bu da, ayrı ayrı parçaların geliştiricilerinin,
+adam/ay modelinde bağımsız çalışmak yerine, bir araya gelip karşılıklı
+iletişim ve senkronizasyon ile çalışmasına, dolayısıyla geliştirme
+işlerinin ölçeklenebilirliğinin azalmasına yol açmaktadır.
+<LI>Parçaların farklı ellerden çıktıkları ve alternatiflerin bol olduğu
+özgür yazılım modeline uymamaktadır.
+<LI>Dağıtımımıza girecek uygulamaları yeni API leri kullanacak şekilde
+değiştirmek, uygulama kodunu çok iyi incelemeyi, yapılan değişikliklerin
+yeni sorunlara yol açmadığını kapsamlı olarak analiz etmeyi gerektirmektedir.
+Bu da büyük zaman ve emek harcamasına yol açacaktır.
+<LI>Bir alt sistemin yetersiz kaldığı görülüp yeni bir alt sistem yapısı
+geliştirildiğinde, API değişikliğine yol açmamak için API üzerindeki
+değer ve çağrılara kapsamları dışında anlamlar ve görevler yüklenmekte,
+ve API yi öğrenmek ve kullanmak isteyenlerin işi çok zorlaşmaktadır.
+Ya da API değişikliği yapılmakta, ve varolan uygulamaların yeni API
+yi taşınması, eski ve üçüncü parti uygulamalar için uyumluluk katmanları
+hazırlanması gibi fazladan sorunlar çıkmaktadır.
+<LI>Her dile API desteği verebilmek için ya CORBA gibi karmaşıklığı arttıracak
+teknolojiler ya da bakım işlerini yükseltecek çok sayıda ``wrapper''
+hazırlanması gereklidir.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_2.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
