--- a/web/projeler/comar/mimari/node_5.html
+++ b/web/projeler/comar/mimari/node_5.html
@@ -44,7 +44,7 @@
 
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_6.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
 <H1 ALIGN=center>VÇTD<BR>
@@ -52,71 +52,80 @@
 
 <H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3><!--TOC section İçindekiler-->
-
-<H2>İçindekiler</H2><!--SEC END -->
-
-<UL><LI>
-<A HREF="#htoc1">1&nbsp;&nbsp;Sorun</A>
-<UL><LI>
-<A HREF="#htoc2">1.1&nbsp;&nbsp;Dağıtımların Yaklaşımı</A>
-<LI><A HREF="#htoc3">1.2&nbsp;&nbsp;İşletim Sistemleri</A>
-<LI><A HREF="#htoc4">1.3&nbsp;&nbsp;Uzman Sistemler</A>
-</UL>
-<LI><A HREF="#htoc5">2&nbsp;&nbsp;Gereksinimler</A>
-<LI><A HREF="#htoc6">3&nbsp;&nbsp;COMAR</A>
-<UL><LI>
-<A HREF="#htoc7">3.1&nbsp;&nbsp;Nesne Modeli</A>
-<LI><A HREF="#htoc8">3.2&nbsp;&nbsp;CSL</A>
-<LI><A HREF="#htoc9">3.3&nbsp;&nbsp;Betikler</A>
-<LI><A HREF="#htoc10">3.4&nbsp;&nbsp;comard</A>
-<LI><A HREF="#htoc11">3.5&nbsp;&nbsp;KGA</A>
-</UL>
-</UL>
-
-
-
-<H2><A NAME="htoc6">3</A>&nbsp;&nbsp;COMAR</H2>
-Ulusal Dağıtım için geliştirdiğimiz yapılandırma çerçevesinin adı
-olarak COMAR (COnfiguration MAnageR) seçtik. Bu çerçeve içinde, yukardaki
-gereksinimlerden çıkardığımız bileşenler ve ayrıntıları şöyle olacak:<BR>
+<H3 ALIGN=center>24 Kasım 2004</H3>
+<H2><A NAME="htoc5">2</A>&nbsp;&nbsp;Gereksinimler</H2>
+Uygulamalar arası uyumlu çalışmayı sağlamak için her uygulama,
+<OL type=1><LI>
+Diğer uygulamaların bilgilerine erişebilmeli,
+<LI>Kendi bilgilerini diğer uygulamalara sunabilmeli,
+<LI>Önceden belirlenmiş görevler içinden neleri yapabildiğini sisteme
+bildirebilmeli,
+<LI>Kendi görevleri dışındaki işlere karışmamalı, bunları ilgili uygulamalardan
+istemeli,
+<LI>Bilgileri değiştiğinde, ilgilenen uygulamaların haberdar edilmesini
+sağlamalıdır.
+</OL>
+Diğer çözümlerin noksanlıklarına takılmadan bunları sağlamak için,
+<OL type=1><LI>
+Uygulamaların çalışmalarını yönetecek bilgiler ve ayarlanması gerektiği
+düşünülen seçenekler genelde uygulama yazarları tarafından önceden
+düşünülerek bir takım ayar dosyalarından okunup kullanılacak duruma
+getirilmiştir. En az emekle entegrasyonu sağlamak ve kapalı kodlu
+üçüncü parti yazılımların da sisteme konabilmesini olanaklı kılmak
+için, uygulamaları oldukları gibi kabul edip, bu ayar dosyalarını
+değiştirmek yoluyla entegre etmek gereklidir.
+<LI>Ayar dosyasından değil de, komut satırından veya benzeri değişik yollarla
+değiştirilen seçenekler ve türlü ayar dosyası biçimleri (ini, XML,
+vs) bulunmaktadır. Ayrıca uygulamalar arası uyum düzeyinde bir ayar,
+alt düzeylerde birden çok ayara karşılık gelebilir. Bu tür implementasyon
+farklılıklarının enkapsüle edilebildiği nesnel bir yaklaşım gerekmektedir.
+<LI>Bir uygulamanın sistemde yapabileceği görevlerin ve alt düzey ayar
+işlemlerinin nasıl yapılacağının bilgisi uygulamanın kendisi ile birlikte
+gelmeli ve uygulamayı en iyi bilen kişi olan paketleyici tarafından
+hazırlanmalıdır. Bu, nesnel yaklaşımla enkapsüle edilmiş ayar işlemlerinin,
+her türlü uygulamanın alt düzey ihtiyaçlarına çevrilebilmesini sağlayacaktır.
+<LI>Nesnel yaklaşımda, uygulamaların bilgilerini ve görevlerini sunacakları
+nesneleri, ve birbirleriyle ilişkilerini gösteren bir model gerekmektedir.
+Bu nesne modelinin hiyerarşik olması, daha kolay kavramayı ve öğrenmeyi
+sağlayacaktır.
+<LI>Nesne modelinde, diğer bilgisayarlardan gelen nesnelerin, birer uzak
+nesne olarak yer alabilmesi ve kullanıcı tarafından aynen yerel nesneler
+gibi yönetilebilmesi, bir ağ yönetim sistemi oluşturmayı çok basit
+bir iş haline getirecektir. Hiyerarşik model burda erişim yetki denetimini
+belli alt sistemler bazında ayarlamayı kolaylaştıracaktır.
+<LI>Aynı görevi yapabilecek birden fazla uygulama olabilir. Duruma göre
+görevlerin hepsine birden yaptırılması, veya içlerinden birinin seçilmesi
+gerekebilir. Seçim için uygulamaların yeteneklerinden başka, o anda
+hangilerinin çalıştığı, hangilerinin çalıştırılabilir olduğu gibi
+kriterlere de bakılması gerekecektir. Uygulama görevi aldığında ise,
+çalışmaya başlayabilmesi için kendi içinde birden fazla işlem yapması
+ve duruma göre nasıl çalışacağına karar vermesi gerekebilir. Bütün
+bu dinamik bilgileri tanımlayabilmek için, iterasyon, karar verme,
+karşılaştırma özellikleri olan bir dil gerekecektir.
+<LI>Bu dilin seçimi özgür bırakıldığında, takip edilmesi zor, çok sayıda
+bağımlılık ortaya çıkmakta; diller arası uyum ve bilgilerin hata giderme
+işlemleri ise çok güçleşmekte olduğundan, tek bir dil üzerinde karar
+verilmelidir.
+<LI>Bu dilin önceki şartları sağlamak için, nesne kavramına sahip olması,
+kontrol edilemeyecek bağımlılık problemleri çıkarabilecek genişleme
+mekanizmaları taşımaması gereklidir. Transaction ve asenkron çalışma
+yapılabilmesi için tüm durumunu (state) içinde taşıyabilen bir script
+dili olması mecburidir.
+<LI>Basit ve öğrenmesi kolay olması, araçlarla işlenebilmesi, IDE ve RAD
+araçları yardımıyla üretilebilir olması, paketleme ve hata giderme
+sürecini çok kısaltacaktır. Uzak işlemler, transaction, profil yönetimi
+ve asenkron çalışma için sentaks kolaylıkları içermesi de olumlu puanlardır.
+<LI>Transaction, uzak nesneler, profil yönetimi, asenkron çalışma, erişim
+yetkileri gibi özellikleri uygulayabilmek için bu dildeki betikleri
+yönetip işletecek bir uygulamaya gerek vardır.
+</OL>
+Toparlarsak, gereksinimlerimizi karşılayabilecek ve diğer benzer sistemlerdeki
+sorunlara düşmeyecek bir yapılandırma yönetim çerçevesi için ihtiyacımız
+olan parçalar, bir nesne modeli (2-5), bir nesne tanımlama dili (6-9),
+uygulamalar için bu dilde yazılmış betikler (1,3) ve bu betikleri
+işletecek bir uygulamadır (10).<BR>
 <BR>
-
-<H3><A NAME="htoc7">3.1</A>&nbsp;&nbsp;Nesne Modeli</H3>
-Bir işletim sisteminde, uygulamalar arasında eşgüdümü sağlayabilmeye
-yönelik olarak, hangi görev ve bilgilerin bulunduğunu tanımlar. Sistem
-açılışı, donanım tanıma, ağ yapılandırmasından grafik çalışma ortamı,
-veri kaynakları, kullanıcı verilerine kadar, bütün bir işletim sistemi
-haritasındaki yapılandırma ve yönetim sorunlarını kapsar.<BR>
-<BR>
-
-<H3><A NAME="htoc8">3.2</A>&nbsp;&nbsp;CSL</H3>
-CSL (COMAR Scripting Language) nesnelerin yazılacağı betik dilidir.<BR>
-<BR>
-
-<H3><A NAME="htoc9">3.3</A>&nbsp;&nbsp;Betikler</H3>
-Nesne modelindeki işlemlerin uygulamalara aktarılmasını sağlayan,
-CSL ile yazılmış nesnelerdir. Her uygulamanın betikleri, uygulamayı
-dağıtım için paketleyen kişi tarafından hazırlanacak, ve uygulama
-kurulurken, nesne modeline yerleşecektir.<BR>
-<BR>
-
-<H3><A NAME="htoc10">3.4</A>&nbsp;&nbsp;comard</H3>
-Nesne modelini ve üzerindeki betikleri işletecek, profil, transaction,
-erişim yetkilerini sağlayacak, uzak nesneler için gereken ağ bağlantılarını
-kuracak uygulamadır. Uygulamalardan ve uzak nesnelerden gelen çağrıları
-alıp verecek bir iletişim birimi; CSL betiklerini ``parse'' edecek
-bir yorumlayıcı; çağrı ve yorumlanmış betikleri işletecek bir mekanizma;
-gerek betiklerin, gerekse comard'nin, ayar dosyalarına erişim, sistem
-yönetimi, program çalıştırma, veri depolama gibi işlerini yapacak
-bir API den oluşmaktadır.<BR>
-<BR>
-
-<H3><A NAME="htoc11">3.5</A>&nbsp;&nbsp;KGA</H3>
-KGA (Kullanıcı Grafik Arayüzleri), kullanıcının COMAR ve nesne modeli
-üzerinde kavramsal olarak bir bütün oluşturan kısımları tek ve basit
-bir grafik arabirim üzerinde ayarlayabilmesini sağlayan uygulamalardır.
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_6.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
