--- a/web/projeler/comar/nedir/node_3.html
+++ b/web/projeler/comar/nedir/node_3.html
@@ -109,9 +109,9 @@ olanaklardan faydalanan, mevcut durumdaki gibi kullanıcıdan uygulamaya
 ön yüzleri inşa etmek özellikle mevcut durum ile kıyaslandığında son
 derece kolay olacaktır.
 <LI><B>Sistem yöneticisi</B> için sistemin tüm yapılandırmasının standart
-bir altyapı üzerine oturtulması, bununla beraber yapılandırmanın
-kolayca taşınması, kullanıcı seçimlerine bağlı profillerin oluşturulması
-ve yönetilmesi de kolay olacaktır.
+bir altyapı üzerine oturtulması, bununla beraber yapılandırmanın kolayca
+taşınması, kullanıcı seçimlerine bağlı profillerin oluşturulması ve
+yönetilmesi de kolay olacaktır.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_2.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
